# fortis

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  project_dump.txt
.github/workflows/: marketplace-ci.yml  rust-ci.yml
backend/: .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/.cargo/: audit.toml
backend/benches/: domain_benchmarks.rs
backend/docs/: API_REFERENCE.md  ARCHITECTURE.md  CLIENT_INTEGRATION.md  CONFIGURATION.md  OPERATIONS.md  SECURITY.md
backend/migrations/: 20260328000000_rwa_pivot_cleanup.sql  20260329170000_initial_fortis_workflow.sql
backend/src/: lib.rs  main.rs
backend/src/api/: handlers.rs  router.rs
backend/src/app/: mod.rs  service.rs  state.rs  worker.rs
backend/src/domain/: mod.rs  traits.rs  types.rs
backend/src/infra/: mod.rs
backend/src/infra/blockchain/: mod.rs  quicknode.rs  solana.rs  strategies.rs
backend/src/infra/compliance/: range.rs
backend/src/infra/database/: postgres.rs
backend/src/test_utils/: mocks.rs
backend/tests/: api_requests.rs  database_integration.rs  infra_blockchain_http_tests.rs  infra_compliance_tests.rs  integration_test.rs
contracts/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/programs/rwa_tokenizer/: Cargo.toml
contracts/programs/rwa_tokenizer/src/: lib.rs
docs/: architecture.md  local-development.md  workflows.md
marketplace-api/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
marketplace-api/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
marketplace-api/app/api/listings/: route.ts
marketplace-api/app/create/: page.tsx
marketplace-api/app/login/: page.tsx
marketplace-api/app/profile/: page.tsx
marketplace-api/backend/: database.py  main.py  models.py
marketplace-api/components/: providers.tsx
marketplace-api/components/auth/: auth-form.tsx
marketplace-api/components/marketplace/: create-listing-form.tsx  filters.tsx  header.tsx  listing-card.tsx  listing-modal.tsx  listings-browser.tsx  wallet-binding-control.tsx  wallet-session-control.tsx
marketplace-api/components/ui/: sonner.tsx
marketplace-api/components/wallet/: fortis-wallet-provider.tsx  wallet-button.tsx
marketplace-api/lib/: env.ts  prisma.ts  route-errors.ts
marketplace-api/lib/dto/: listing.ts  order.ts
marketplace-api/lib/services/: fortis-client.ts  listings.ts  order-updates.ts  orders.ts  service-error.ts  users.ts
marketplace-api/lib/solana/: transfer-intent.ts
marketplace-api/lib/supabase/: admin.ts  client.ts  config.ts  database.types.ts  marketplace-session.ts  middleware.ts  redirects.ts  server-auth.ts  server.ts  wallet-auth.ts  wallet-profile.ts  web3-client.ts
marketplace-api/lib/validators/: listings.ts  orders.ts  webhooks.ts
marketplace-api/prisma/: schema.prisma
marketplace-api/src/: App.tsx  index.css
marketplace-api/src/components/: Filters.tsx  Header.tsx  ListingCard.tsx  ListingModal.tsx
marketplace-api/src/context/: ListingsContext.tsx
marketplace-api/src/pages/: CreateListing.tsx  Index.tsx
marketplace-api/supabase/: config.toml
marketplace-api/supabase/migrations/: 20260330120000_bootstrap_public_tables.sql  20260330130000_supabase_first_schema.sql  20260331101500_fix_marketplace_profile_sync_and_storage.sql  20260331193000_manual_sql_editor_profile_sync.sql  20260402160000_wallet_first_siws_auth.sql  20260402173000_harden_wallet_identity_resolution.sql  20260402190000_fix_web3_provider_identity_resolution.sql
marketplace-api/tests/: orders.test.ts
marketplace-api/types/: listing.ts
programs/rwa_tokenizer/: Cargo.toml
programs/rwa_tokenizer/src/: lib.rs
scripts/: initialize-mint.ts
supabase/: config.toml
tests/: rwa-tokenizer.ts
(+8 files in other folders)
